fdo#74507: Ensure that we have non-null pointer to ScColumn.

Else it would cause a null pointer dereferencing when "precision as shown"
option is set.

Change-Id: Ie8d2fdb916b575fff7e0217c45c18a2c799577cb